Parser/MalicParser.java
// Generated from /home/mercy/project/compiler-2017/src/com/mercy/compiler/Parser/Malic.g4 by ANTLR 4.6
package com.mercy.compiler.Parser;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MalicParser extends Parser {
    static { RuntimeMetaData.checkVersion("4.6", RuntimeMetaData.VERSION); }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9,
            T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17,
            T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24,
            T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31,
            T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38,
            T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45,
            T__45=46, T__46=47, T__47=48, T__48=49, StringLiteral=50, Identifier=51,
            DecimalInteger=52, WS=53, BLOCK_COMMENT=54, LINE_COMMENT=55;
    public static final int
            RULE_compilationUnit = 0, RULE_classDefinition = 1, RULE_functionDefinition = 2,
            RULE_variableDefinition = 3, RULE_parameter = 4, RULE_primitiveType = 5,
            RULE_typeType = 6, RULE_block = 7, RULE_statement = 8, RULE_expressionList = 9,
            RULE_expression = 10, RULE_primary = 11, RULE_literal = 12, RULE_creator = 13;
    public static final String[] ruleNames = {
            "compilationUnit", "classDefinition", "functionDefinition", "variableDefinition",
            "parameter", "primitiveType", "typeType", "block", "statement", "expressionList",
            "expression", "primary", "literal", "creator"
    };

    private static final String[] _LITERAL_NAMES = {
            null, "'class'", "'{'", "'}'", "'('", "','", "')'", "'='", "';'", "'bool'",
            "'int'", "'string'", "'void'", "'['", "']'", "'if'", "'else'", "'for'",
            "'while'", "'return'", "'break'", "'continue'", "'.'", "'new'", "'++'",
            "'--'", "'+'", "'-'", "'~'", "'!'", "'*'", "'/'", "'%'", "'<<'", "'>>'",
            "'<'", "'>'", "'>='", "'<='", "'=='", "'!='", "'&'", "'^'", "'|'", "'&&'",
            "'||'", "'this'", "'true'", "'false'", "'null'"
    };
    private static final String[] _SYMBOLIC_NAMES = {
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, "StringLiteral", "Identifier", "DecimalInteger", "WS", "BLOCK_COMMENT",
            "LINE_COMMENT"
    };
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() { return "Malic.g4"; }

    @Override
    public String[] getRuleNames() { return ruleNames; }

    @Override
    public String getSerializedATN() { return _serializedATN; }

    @Override
    public ATN getATN() { return _ATN; }

    public MalicParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
    }
    public static class CompilationUnitContext extends ParserRuleContext {
        public TerminalNode EOF() { return getToken(MalicParser.EOF, 0); }
        public List<VariableDefinitionContext> variableDefinition() {
            return getRuleContexts(VariableDefinitionContext.class);
        }
        public VariableDefinitionContext variableDefinition(int i) {
            return getRuleContext(VariableDefinitionContext.class,i);
        }
        public List<FunctionDefinitionContext> functionDefinition() {
            return getRuleContexts(FunctionDefinitionContext.class);
        }
        public FunctionDefinitionContext functionDefinition(int i) {
            return getRuleContext(FunctionDefinitionContext.class,i);
        }
        public List<ClassDefinitionContext> classDefinition() {
            return getRuleContexts(ClassDefinitionContext.class);
        }
        public ClassDefinitionContext classDefinition(int i) {
            return getRuleContext(ClassDefinitionContext.class,i);
        }
        public CompilationUnitContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_compilationUnit; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof MalicListener ) ((MalicListener)listener).enterCompilationUnit(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof MalicListener ) ((MalicListener)listener).exitCompilationUnit(this);
        }
    }

    public final CompilationUnitContext compilationUnit() throws RecognitionException {
        CompilationUnitContext _localctx = new CompilationUnitContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_compilationUnit);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(33);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << Identifier))) != 0)) {
                    {
                        setState(31);
                        _errHandler.sync(this);
                        switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
                            case 1:
                            {
                                setState(28);
                                variableDefinition();
                            }
                            break;
                            case 2:
                            {
                                setState(29);
                                functionDefinition();
                            }
                            break;
                            case 3:
                            {
                                setState(30);
                                classDefinition();
                            }
                            break;
                        }
                    }
                    setState(35);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(36);
                match(EOF);
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ClassDefinitionContext extends ParserRuleContext {
        public Token name;
        public TerminalNode Identifier() { return getToken(MalicParser.Identifier, 0); }
        public List<FunctionDefinitionContext> functionDefinition() {
            return getRuleContexts(FunctionDefinitionContext.class);
        }
        public FunctionDefinitionContext functionDefinition(int i) {
            return getRuleContext(FunctionDefinitionContext.class,i);
        }
        public List<VariableDefinitionContext> variableDefinition() {
            return getRuleContexts(VariableDefinitionContext.class);
        }
        public VariableDefinitionContext variableDefinition(int i) {
            return getRuleContext(VariableDefinitionContext.class,i);
        }
        public ClassDefinitionContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_classDefinition; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof MalicListener ) ((MalicListener)listener).enterClassDefinition(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof MalicListener ) ((MalicListener)listener).exitClassDefinition(this);
        }
    }

    public final ClassDefinitionContext classDefinition() throws RecognitionException {
        ClassDefinitionContext _localctx = new ClassDefinitionContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_classDefinition);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(38);
                match(T__0);
                setState(39);
                ((ClassDefinitionContext)_localctx).name = match(Identifier);
                setState(40);
                match(T__1);
                setState(45);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << Identifier))) != 0)) {
                    {
                        setState(43);
                        _errHandler.sync(this);
                        switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
                            case 1:
                            {
                                setState(41);
                                functionDefinition();
                            }
                            break;
                            case 2:
                            {
                                setState(42);
                                variableDefinition();
                            }
                            break;
                        }
                    }
                    setState(47);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(48);
                match(T__2);
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class FunctionDefinitionContext extends ParserRuleContext {
        public TypeTypeContext ret;
        public Token name;
        public BlockContext block() {
            return getRuleContext(BlockContext.class,0);
        }
        public TerminalNode Identifier() { return getToken(MalicParser.Identifier, 0); }
        public List<ParameterContext> parameter() {
            return getRuleContexts(ParameterContext.class);
        }
        public ParameterContext parameter(int i) {
            return getRuleContext(ParameterContext.class,i);
        }
        public TypeTypeContext typeType() {
            return getRuleContext(TypeTypeContext.class,0);
        }
        public FunctionDefinitionContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_functionDefinition; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof MalicListener ) ((MalicListener)listener).enterFunctionDefinition(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof MalicListener ) ((MalicListener)listener).exitFunctionDefinition(this);
        }
    }

    public final FunctionDefinitionContext functionDefinition() throws RecognitionException {
        FunctionDefinitionContext _localctx = new FunctionDefinitionContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_functionDefinition);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(51);
                _errHandler.sync(this);
                switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
                    case 1:
                    {
                        setState(50);
                        ((FunctionDefinitionContext)_localctx).ret = typeType();
                    }
                    break;
                }
                setState(53);
                ((FunctionDefinitionContext)_localctx).name = match(Identifier);
                setState(54);
                match(T__3);
                setState(63);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << Identifier))) != 0)) {
                    {
                        setState(55);
                        parameter();
                        setState(60);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while (_la==T__4) {
                            {
                                {
                                    setState(56);
                                    match(T__4);
                                    setState(57);
                                    parameter();
                                }
                            }
                            setState(62);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                    }
                }

                setState(65);
                match(T__5);
                setState(66);
                block();
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class VariableDefinitionContext extends ParserRuleContext {
        public TypeTypeContext typeType() {
            return getRuleContext(TypeTypeContext.class,0);
        }
        public TerminalNode Identifier() { return getToken(MalicParser.Identifier, 0); }
        public ExpressionContext expression() {
            return getRuleContext(ExpressionContext.class,0);
        }
        public VariableDefinitionContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_variableDefinition; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof MalicListener ) ((MalicListener)listener).enterVariableDefinition(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof MalicListener ) ((MalicListener)listener).exitVariableDefinition(this);
        }
    }

    public final VariableDefinitionContext variableDefinition() throws RecognitionException {
        VariableDefinitionContext _localctx = new VariableDefinitionContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_variableDefinition);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(68);
                typeType();
                setState(69);
                match(Identifier);
                setState(72);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la==T__6) {
                    {
                        setState(70);
                        match(T__6);
                        setState(71);
                        expression(0);
                    }
                }

                setState(74);
                match(T__7);
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ParameterContext extends ParserRuleContext {
        public TypeTypeContext typeType() {
            return getRuleContext(TypeTypeContext.class,0);
        }
        public TerminalNode Identifier() { return getToken(MalicParser.Identifier, 0); }
        public ParameterContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_parameter; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof MalicListener ) ((MalicListener)listener).enterParameter(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof MalicListener ) ((MalicListener)listener).exitParameter(this);
        }
    }

    public final ParameterContext parameter() throws RecognitionException {
        ParameterContext _localctx = new ParameterContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_parameter);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(76);
                typeType();
                setState(77);
                match(Identifier);
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class PrimitiveTypeContext extends ParserRuleContext {
        public Token type;
        public PrimitiveTypeContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_primitiveType; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof MalicListener ) ((MalicListener)listener).enterPrimitiveType(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof MalicListener ) ((MalicListener)listener).exitPrimitiveType(this);
        }
    }

    public final PrimitiveTypeContext primitiveType() throws RecognitionException {
        PrimitiveTypeContext _localctx = new PrimitiveTypeContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_primitiveType);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(79);
                ((PrimitiveTypeContext)_localctx).type = _input.LT(1);
                _la = _input.LA(1);
                if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11))) != 0)) ) {
                    ((PrimitiveTypeContext)_localctx).type = (Token)_errHandler.recoverInline(this);
                }
                else {
                    if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class TypeTypeContext extends ParserRuleContext {
        public TerminalNode Identifier() { return getToken(MalicParser.Identifier, 0); }
        public PrimitiveTypeContext primitiveType() {
            return getRuleContext(PrimitiveTypeContext.class,0);
        }
        public TypeTypeContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_typeType; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof MalicListener ) ((MalicListener)listener).enterTypeType(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof MalicListener ) ((MalicListener)listener).exitTypeType(this);
        }
    }

    public final TypeTypeContext typeType() throws RecognitionException {
        TypeTypeContext _localctx = new TypeTypeContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_typeType);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(83);
                _errHandler.sync(this);
                switch (_input.LA(1)) {
                    case Identifier:
                    {
                        setState(81);
                        match(Identifier);
                    }
                    break;
                    case T__8:
                    case T__9:
                    case T__10:
                    case T__11:
                    {
                        setState(82);
                        primitiveType();
                    }
                    break;
                    default:
                        throw new NoViableAltException(this);
                }
                setState(89);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la==T__12) {
                    {
                        {
                            setState(85);
                            match(T__12);
                            setState(86);
                            match(T__13);
                        }
                    }
                    setState(91);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class BlockContext extends ParserRuleContext {
        public List<StatementContext> statement() {
            return getRuleContexts(StatementContext.class);
        }
        public StatementContext statement(int i) {
            return getRuleContext(StatementContext.class,i);
        }
        public BlockContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_block; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof MalicListener ) ((MalicListener)listener).enterBlock(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof MalicListener ) ((MalicListener)listener).exitBlock(this);
        }
    }

    public final BlockContext block() throws RecognitionException {
        BlockContext _localctx = new BlockContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_block);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(92);
                match(T__1);
                setState(96);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__3) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__14) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << T__20) | (1L << T__22) | (1L << T__23) | (1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27) | (1L << T__28) | (1L << T__45) | (1L << T__46) | (1L << T__47) | (1L << T__48) | (1L << StringLiteral) | (1L << Identifier) | (1L << DecimalInteger))) != 0)) {
                    {
                        {
                            setState(93);
                            statement();
                        }
                    }
                    setState(98);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(99);
                match(T__2);
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class StatementContext extends ParserRuleContext {
        public StatementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_statement; }

        public StatementContext() { }
        public void copyFrom(StatementContext ctx) {
            super.copyFrom(ctx);
        }
    }
    public static class VarDefStmtContext extends StatementContext {
        public VariableDefinitionContext variableDefinition() {
            return getRuleContext(VariableDefinitionContext.class,0);
        }
        public VarDefStmtContext(StatementContext ctx) { copyFrom(ctx); }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof MalicListener ) ((MalicListener)listener).enterVarDefStmt(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof MalicListener ) ((MalicListener)listener).exitVarDefStmt(this);
        }
    }
    public static class ForStmtContext extends StatementContext {
        public ExpressionContext init;
        public ExpressionContext cond;
        public ExpressionContext incr;
        public StatementContext statement() {
            return getRuleContext(StatementContext.class,0);
        }
        public List<ExpressionContext> expression() {
            return getRuleContexts(ExpressionContext.class);
        }
        public ExpressionContext expression(int i) {
            return getRuleContext(ExpressionContext.class,i);
        }
        public ForStmtContext(StatementContext ctx) { copyFrom(ctx); }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof MalicListener ) ((MalicListener)listener).enterForStmt(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof MalicListener ) ((MalicListener)listener).exitForStmt(this);
        }
    }
    public static class ExprStmtContext extends StatementContext {
        public ExpressionContext expression() {
            return getRuleContext(ExpressionContext.class,0);
        }
        public ExprStmtContext(StatementContext ctx) { copyFrom(ctx); }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof MalicListener ) ((MalicListener)listener).enterExprStmt(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof MalicListener ) ((MalicListener)listener).exitExprStmt(this);
        }
    }
    public static class BlankStmtContext extends StatementContext {
        public BlankStmtContext(StatementContext ctx) { copyFrom(ctx); }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof MalicListener ) ((MalicListener)listener).enterBlankStmt(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof MalicListener ) ((MalicListener)listener).exitBlankStmt(this);
        }
    }
    public static class WhileStmtContext extends StatementContext {
        public ExpressionContext expression() {
            return getRuleContext(ExpressionContext.class,0);
        }
        public StatementContext statement() {
            return getRuleContext(StatementContext.class,0);
        }
        public WhileStmtContext(StatementContext ctx) { copyFrom(ctx); }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof MalicListener ) ((MalicListener)listener).enterWhileStmt(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof MalicListener ) ((MalicListener)listener).exitWhileStmt(this);
        }
    }
    public static class IfStmtContext extends StatementContext {
        public ExpressionContext expression() {
            return getRuleContext(ExpressionContext.class,0);
        }
        public List<StatementContext> statement() {
            return getRuleContexts(StatementContext.class);
        }
        public StatementContext statement(int i) {
            return getRuleContext(StatementContext.class,i);
        }
        public IfStmtContext(StatementContext ctx) { copyFrom(ctx); }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof MalicListener ) ((MalicListener)listener).enterIfStmt(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof MalicListener ) ((MalicListener)listener).exitIfStmt(this);
        }
    }
    public static class BlockStmtContext extends StatementContext {
        public BlockContext block() {
            return getRuleContext(BlockContext.class,0);
        }
        public BlockStmtContext(StatementContext ctx) { copyFrom(ctx); }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof MalicListener ) ((MalicListener)listener).enterBlockStmt(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof MalicListener ) ((MalicListener)listener).exitBlockStmt(this);
        }
    }
    public static class BreakStmtContext extends StatementContext {
        public BreakStmtContext(StatementContext ctx) { copyFrom(ctx); }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof MalicListener ) ((MalicListener)listener).enterBreakStmt(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof MalicListener ) ((MalicListener)listener).exitBreakStmt(this);
        }
    }
    public static class ReturnStmtContext extends StatementContext {
        public ExpressionContext expression() {
            return getRuleContext(ExpressionContext.class,0);
        }
        public ReturnStmtContext(StatementContext ctx) { copyFrom(ctx); }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof MalicListener ) ((MalicListener)listener).enterReturnStmt(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof MalicListener ) ((MalicListener)listener).exitReturnStmt(this);
        }
    }
    public static class ContinueStmtContext extends StatementContext {
        public ContinueStmtContext(StatementContext ctx) { copyFrom(ctx); }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof MalicListener ) ((MalicListener)listener).enterContinueStmt(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof MalicListener ) ((MalicListener)listener).exitContinueStmt(this);
        }
    }

    public final StatementContext statement() throws RecognitionException {
        StatementContext _localctx = new StatementContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_statement);
        int _la;
        try {
            setState(146);
            _errHandler.sync(this);
            switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
                case 1:
                    _localctx = new BlockStmtContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(101);
                    block();
                }
                break;
                case 2:
                    _localctx = new VarDefStmtContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(102);
                    variableDefinition();
                }
                break;
                case 3:
                    _localctx = new IfStmtContext(_localctx);
                    enterOuterAlt(_localctx, 3);
                {
                    setState(103);
                    match(T__14);
                    setState(104);
                    match(T__3);
                    setState(105);
                    expression(0);
                    setState(106);
                    match(T__5);
                    setState(107);
                    statement();
                    setState(110);
                    _errHandler.sync(this);
                    switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
                        case 1:
                        {
                            setState(108);
                            match(T__15);
                            setState(109);
                            statement();
                        }
                        break;
                    }
                }
                break;
                case 4:
                    _localctx = new ForStmtContext(_localctx);
                    enterOuterAlt(_localctx, 4);
                {
                    setState(112);
                    match(T__16);
                    setState(113);
                    match(T__3);
                    setState(115);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__22) | (1L << T__23) | (1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27) | (1L << T__28) | (1L << T__45) | (1L << T__46) | (1L << T__47) | (1L << T__48) | (1L << StringLiteral) | (1L << Identifier) | (1L << DecimalInteger))) != 0)) {
                        {
                            setState(114);
                            ((ForStmtContext)_localctx).init = expression(0);
                        }
                    }

                    setState(117);
                    match(T__7);
                    setState(119);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__22) | (1L << T__23) | (1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27) | (1L << T__28) | (1L << T__45) | (1L << T__46) | (1L << T__47) | (1L << T__48) | (1L << StringLiteral) | (1L << Identifier) | (1L << DecimalInteger))) != 0)) {
                        {
                            setState(118);
                            ((ForStmtContext)_localctx).cond = expression(0);
                        }
                    }

                    setState(121);
                    match(T__7);
                    setState(123);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__22) | (1L << T__23) | (1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27) | (1L << T__28) | (1L << T__45) | (1L << T__46) | (1L << T__47) | (1L << T__48) | (1L << StringLiteral) | (1L << Identifier) | (1L << DecimalInteger))) != 0)) {
                        {
                            setState(122);
                            ((ForStmtContext)_localctx).incr = expression(0);
                        }
                    }

                    setState(125);
                    match(T__5);
                    setState(126);
                    statement();
                }
                break;
                case 5:
                    _localctx = new WhileStmtContext(_localctx);
                    enterOuterAlt(_localctx, 5);
                {
                    setState(127);
                    match(T__17);
                    setState(128);
                    match(T__3);
                    setState(129);
                    expression(0);
                    setState(130);
                    match(T__5);
                    setState(131);
                    statement();
                }
                break;
                case 6:
